Small fix to replies
fix the reply bar "Replying to..." being invisible (good ol' class^= was messing it up)

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -509,7 +509,7 @@ nav[class^="wrapper_"] div[class^="listItem_"]+div[aria-label] {
     display: none;
 }
 
-[class^=bar_] {
+[class^=containerPadding_]>[class^=bar_] {
     display: none;
 }
 
